[product-catalog] jooq improve generations, naming conventions, mapper, fetch composite product
