# product-catalog/src/main/java/com/gelerion/flexi/shop/product/catalog/controllers/ProductsController.java
@@ -1,8 +1,7 @@
 package com.gelerion.flexi.shop.product.catalog.controllers;
 
-import com.gelerion.flexi.shop.product.catalog.domain.entities.tables.records.TagRecord;
-import com.gelerion.flexi.shop.product.catalog.models.Product;
 import com.gelerion.flexi.shop.product.catalog.models.ProductCriteria;
+import com.gelerion.flexi.shop.product.catalog.models.ProductResource;
 import com.gelerion.flexi.shop.product.catalog.rest.controllers.ProductsApi;
 import com.gelerion.flexi.shop.product.catalog.services.ProductsService;
 import org.springframework.http.ResponseEntity;
@@ -20,23 +19,23 @@ public class ProductsController implements ProductsApi {
     }
 
     @Override
-    public ResponseEntity<Product> createProduct(Product product) {
+    public ResponseEntity<ProductResource> createProduct(ProductResource product) {
         return null;
     }
 
     @Override
-    public ResponseEntity<Product> getProduct(String productId) {
+    public ResponseEntity<ProductResource> getProduct(String productId) {
         var product = productsService.getProduct(productId);
         return ResponseEntity.ok(product);
     }
 
     @Override
-    public ResponseEntity<List<Product>> searchProducts(ProductCriteria filter, String q, String sort, String order) {
+    public ResponseEntity<List<ProductResource>> searchProducts(ProductCriteria filter, String q, String sort, String order) {
         return null;
     }
 
     @Override
-    public ResponseEntity<Product> updateProduct(String productId, Product product) {
+    public ResponseEntity<ProductResource> updateProduct(String productId, ProductResource product) {
         return null;
     }
 }
